ajustes en estilos de login, cambio de iconos y agregado de funcionalidad en modal crear nodo

--- a/src/app/pages/documented-information/components/documented-details/documented-details.component.html
+++ b/src/app/pages/documented-information/components/documented-details/documented-details.component.html
@@ -29,7 +29,7 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element;"> 
                 <button mat-icon-button aria-label="boton descargar archivo" (click)="download()">
-                    <mat-icon>backup</mat-icon>
+                    <mat-icon>download</mat-icon>
                 </button>
             </td>
         </ng-container>
