--- a/src/app/pages/documented-information/components/documented/documented.component.scss
+++ b/src/app/pages/documented-information/components/documented/documented.component.scss
@@ -49,6 +49,11 @@
         line-height: 20px;
         color      : #52B8C3;
     }
+
+    img{
+        width: 29px;
+        height: 20px;
+    }
 }
 
 .tree-document-invisible {
