--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.html
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.html
@@ -1,7 +1,7 @@
 <div class="cont-actions-edit-doc">
     <button (click)="back()" class="btn-new-doc">Atras</button>
     <button class="btn-new-doc" (click)="ModalDoc()">Crear Nuevo Documento</button>
-    <button class="btn-new-doc" (click)="mut()">Subir archivo</button>
+    <button class="btn-new-doc" (click)="mut()">Crear Nodo</button>
 </div>
 
 <mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
