--- a/src/app/pages/documented-information/components/modal-document/actas-form/actas-form.component.html
+++ b/src/app/pages/documented-information/components/modal-document/actas-form/actas-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formActas" class="form-standart frm-modal-document" mat-dialog-content>
+<form [formGroup]="formActas" class="form-standart frm-modal-document">
     <mat-form-field appearance="outline">
         <mat-label>Sistema de gestión aplicable</mat-label>
         <input matInput placeholder="Sistema de gestión aplicable" formControlName="managementSystem">
