--- a/src/app/shared/components/modal-login/modal-login.component.html
+++ b/src/app/shared/components/modal-login/modal-login.component.html
@@ -8,7 +8,7 @@
             </form>
             
             <div class="forgot-password-text">
-                <div>¿Olvido su contraseña?</div>
+                <div>¿Olvidaste tu contraseña?</div>
             </div>
     </div>
 </div>
