--- a/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.scss
+++ b/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.scss
@@ -1,6 +1,6 @@
 .frm-modal-document {
     margin-top: 0;
-    padding   : 0;
+    padding   : 0 20px;
     mat-form-field {
         max-width: initial;
     }
