--- a/src/app/pages/documented-information/components/modal-document/internal-documents/internal-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/internal-documents/internal-documents.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formInternalDocument" class="form-standart frm-modal-document" mat-dialog-content>
+<form [formGroup]="formInternalDocument" class="form-standart frm-modal-document">
     <mat-form-field appearance="outline">
         <mat-label>Nombre de Documento</mat-label>
         <input matInput placeholder="Nombre de Documento" formControlName="documentName">
