--- a/src/app/pages/documented-information/components/modal-document/modal-document.component.scss
+++ b/src/app/pages/documented-information/components/modal-document/modal-document.component.scss
@@ -8,7 +8,9 @@
 
 .mff-typedoc {
     width      : 100%;
+    padding: 0 20px;
     padding-top: 1.34375em;
+    box-sizing: border-box;
 }
 
 ::ng-deep .cont-download {
