cambio de estilos en tab, botones, opciones

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,9 +1,13 @@
 $primary: #8cc434;
 $secondary: #3D4B49;
 $accent: #f3ac04;
-$warn: #FFAB00;
-$success: #36B37E;
+$warn: #FCAF17;
+$success: #00ADAA;
 $error: #FF5630;
 $white: #ffffff;
 $tamarama:#3D4B49;
 $black: #00000000;
+$blue: #2B3E3C;
+$gray:#F7F7F7;
+$gray-dark: #808A98;
+$gray-secondary: #FAFAFC;
