--- a/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
@@ -46,7 +46,7 @@
 
 </form>
 
-<div class="container-btn-save">
+<div class="container-btn-save btn-mdl-doc">
     <button (click)="save()" type="button" [disabled]="!formGeneralDocument.valid">Guardar</button>
     <button type="button" mat-dialog-close>Cerrar</button>
 </div>
