--- a/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
+++ b/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
@@ -1,6 +1,6 @@
 <div class="header-mut">
-    <p>Nuevo-Documentos</p>
-    <p mat-dialog-close>X</p>
+    <p>Nuevos-Documentos</p>
+    <img src="assets/images/close-icon.png" alt="icono cerrar" mat-dialog-close>
 </div>
 
 <div class="body-mut">
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div class="container-btn-save">
+<div class="container-btn-save btn-mdl-e-doc">
   <button [disabled]="nivel === 1" (click)="back()">Atras</button>
   <button mat-dialog-close>Salir</button>
   <button>Registrar</button>
