--- a/src/app/pages/documented-information/components/documented-details/documented-details.component.scss
+++ b/src/app/pages/documented-information/components/documented-details/documented-details.component.scss
@@ -50,13 +50,23 @@
     }
 }
 
-.btn-edit-doc{
+.btn-back-doc{
     background-color: $tamarama;
     color: $white;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.btn-edit-doc{
+  width: 104px;
+  height: 36px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  color: $white;
+  background-color: $warn;
 }
 
 .cont-actions-detail-doc{
