--- a/src/app/pages/documented-information/components/edit-document/document-one/document-one.component.html
+++ b/src/app/pages/documented-information/components/edit-document/document-one/document-one.component.html
@@ -1,4 +1,4 @@
-<div class="container-responsible-table">
+<div class="container-responsible-table" style="margin-top: 0;">
     <table mat-table [dataSource]="dataSource" class="table-standart tbedit-doc">
         <ng-container matColumnDef="documentName">
             <th mat-header-cell *matHeaderCellDef> Nombre de documento </th>
@@ -59,7 +59,7 @@
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let element;"> 
                 <button mat-icon-button aria-label="boton editar documento" (click)="edit(element)">
-                    <mat-icon>edit</mat-icon>
+                    <img src="assets/images/Edit-dark-blue.png" alt="icono editar">
                 </button>
             </td>
         </ng-container>
