--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
@@ -11,10 +11,25 @@
 .cont-actions-edit-doc{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     gap: 20px;
 }
 
-.btn-new-doc{
+.col-2-edit-doc{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22px;
+}
+
+.content-btn{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6px;
+    align-items: center;
+    line-height: 20px;
+}
+
+.btn-back-doc{
     background-color: $tamarama;
     color: $white;
     border: none;
@@ -23,11 +38,47 @@
     cursor: pointer;
 }
 
-::ng-deep .tbedit-doc {
+.btn-new-doc{
+    background-color: $success;
+    color: $white;
+    border: none;
+    padding: 8px 17px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 12px;
+}
 
+.btn-upload-doc{
+    background-color: $warn;
+    color: $white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+::ng-deep .mdl-doc{
+    .mat-dialog-container{
+        padding: 0;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 20px;
+    }
+}
+
+::ng-deep .mdl-e-doc{
+    .mat-dialog-container{
+        padding: 32px 36px 23px 36px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 20px;
+    }
+}
+
+::ng-deep .tbedit-doc {
+    margin-top: 0;
     .mat-table thead,
     [mat-header-row] {
-        background-color: $primary;
+        background-color: $blue;
     }
 
     th {
@@ -37,6 +88,10 @@
     }
 
     th.mat-header-cell:first-of-type, th.mat-header-cell:last-of-type{
+        padding: 0;
+    }
+
+    td.mat-cell:first-of-type, td.mat-cell:last-of-type{
         padding: 0;
     }
 
