--- a/src/app/pages/documented-information/components/modal-document/actas-form/actas-form.component.html
+++ b/src/app/pages/documented-information/components/modal-document/actas-form/actas-form.component.html
@@ -25,7 +25,7 @@
 
 </form>
 
-<div class="container-btn-save" mat-dialog-actions>
+<div class="container-btn-save btn-mdl-doc" mat-dialog-actions>
     <button (click)="save()" type="button" [disabled]="!formActas.valid">Guardar</button>
     <button type="button" mat-dialog-close>Cerrar</button>
 </div>
