--- a/src/app/pages/documented-information/components/modal-document/internal-documents/internal-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/internal-documents/internal-documents.component.html
@@ -27,7 +27,7 @@
 
 </form>
 
-<div class="container-btn-save" mat-dialog-actions>
+<div class="container-btn-save btn-mdl-doc" mat-dialog-actions>
     <button (click)="save()" type="button" [disabled]="!formInternalDocument.valid">Guardar</button>
     <button type="button" mat-dialog-close>Cerrar</button>
 </div>
