--- a/src/app/pages/options/components/sgc-iso/sgc-iso.component.html
+++ b/src/app/pages/options/components/sgc-iso/sgc-iso.component.html
@@ -1,28 +1,24 @@
 <div class="second-menu" *ngIf="userLoguer">
-    <div class="title-second-menu">SISTEMA DE GESTIÓN DE CALIDAD ISO 9001</div>
     <div class="col1">
-        <div class="layer1" (click)="setIdOption('1001')">
-            <div class="layer2">
-                <div class="layer3">
-                    <div>Seguimiento de SAC y SOM</div>
-                </div>
+        <div class="title-second-menu">
+            <img src="assets/images/icon-hand-gear.png" alt="icono engranaje">
+            <div>SISTEMA DE GESTIÓN DE CALIDAD ISO 9001</div>    
+        </div>
+
+        <div class="cont-options">
+            <div class="layer1" (click)="setIdOption('1001')">
+                <div>Seguimiento de SAC y SOM</div>
+            </div>
+            <div class="layer1" (click)="setIdOption('1002')">
+                <div>Indicadores de Calidad</div>
+            </div>
+            <div class="layer1" (click)="setIdOption('1003')">
+                <div>Gestión de Riesgos</div>
             </div>
         </div>
-        <div class="layer1" (click)="setIdOption('1002')">
-            <div class="layer2">
-                <div class="layer3">
-                    <div>Indicadores de Calidad</div>
-                </div>
-            </div>
-        </div>
+        
     </div>
-    <div class="col2">
-        <div class="layer1" (click)="setIdOption('1003')">
-            <div class="layer2">
-                <div class="layer3">
-                    <div>Gestión de Riesgos</div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- <div class="col2">
+       
+    </div> -->
 </div>
