--- a/src/app/pages/options/components/sgc-iso/sgc-iso.component.scss
+++ b/src/app/pages/options/components/sgc-iso/sgc-iso.component.scss
@@ -7,56 +7,58 @@
     width    : 100%;
     display  : flex;
     flex-wrap: wrap;
+    margin-top: 51px;
+    justify-content: center;
 
     .title-second-menu {
         width        : 100%;
-        color        : $tamarama;
-        font-weight  : 600;
-        margin-bottom: 100px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-bottom: 77px;
+        gap: 20px;
+
+       img{
+        width: 23px;
+        height: 28px;
+       }
+
+       div{
+         color: $success;
+         font-weight  : 700;
+         font-size: 22px;
+       }
     }
 
     .col1 {
         display        : flex;
         flex-wrap      : wrap;
-        gap            : 50px;
         width          : 100%;
+        max-width: 570px;
         justify-content: center;
     }
 
-    .col2 {
-        display        : flex;
-        flex-wrap      : wrap;
-        width          : 100%;
-        justify-content: center;
-        margin-top     : 50px;
+    .cont-options{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 14px;
     }
 
     .layer1 {
-        background-color: $primary;
-        padding         : 10px;
+        background-color: $gray-secondary;
+        padding         : 17px 0px;
         border-radius   : 5px;
         width           : 100%;
-        max-width       : 300px;
         cursor          : pointer;
-    }
-
-    .layer2 {
-        background-color: $white;
-        padding         : 1px;
-        border-radius   : 5px;
-    }
-
-    .layer3 {
-        background-color: $white;
-        padding         : 15px 10px;
-        border-radius   : 5px;
-    }
-
-    .layer1:hover {
-        background-color: #2c3f3e;
-
-        .layer3 {
-            background-color: #f4ac04;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+        font-size: 18px;
+        font-weight: 600;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        div{
+            line-height: 20px;
         }
     }
+
 }
